# 99Haskell

./: .gitignore  99HaskellProblems.cabal  TAGS  stack.yaml
.stack-work/install/x86_64-osx/lts-6.7/7.10.3/flag-cache/: 99HaskellProblems-0.1.0.0-8a4a788f33bf7df870f03e2802f4e13c
.stack-work/install/x86_64-osx/lts-6.7/7.10.3/lib/x86_64-osx-ghc-7.10.3/99HaskellProblems-0.1.0.0-ChJG6U390BnCoFVc0okgVp/: Lib.dyn_hi  Lib.hi  libHS99HaskellProblems-0.1.0.0-ChJG6U390BnCoFVc0okgVp-ghc7.10.3.dylib
.stack-work/install/x86_64-osx/lts-6.7/7.10.3/pkgdb/: 99HaskellProblems-0.1.0.0-8a4a788f33bf7df870f03e2802f4e13c.conf  package.cache
src/: Problem1.hs  Problem10.hs  Problem11.hs  Problem12.hs  Problem13.hs  Problem14.hs  Problem16.hs  Problem18.hs  Problem19.hs  Problem2.hs  Problem28.hs  Problem3.hs  Problem4.hs  Problem5.hs  Problem54a.hs  Problem55.hs  Problem6.hs  Problem7.hs  Problem8.hs  Problem9.hs  ProblemsTrees54a-60.hs  ProblemsTrees54a60.hs  problem15.hs  problem17.hs  problem20.hs  problem21.hs  problem22.hs  problem23.hs  problem26.hs  problem27.hs
