name:                99HaskellProblems
version:             0.1.0.0
synopsis:            Initial project template from stack
description:         Please see README.md
homepage:            https://github.com/githubuser/99HaskellProblems#readme
license:             BSD3
license-file:        LICENSE
author:              Author name here
maintainer:          example@example.com
copyright:           2016 Author name here
category:            Web
build-type:          Simple
-- extra-source-files:
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Lib
  build-depends:       QuickCheck >= 2.8.2
                     , base >= 4.7 && < 5
                     , containers >= 0.5.6.2
  default-language:    Haskell2010

executable 99HaskellProblems-exe
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       99HaskellProblems
                     , QuickCheck >= 2.8.2
                     , base
                     , containers >= 0.5.6.2
  default-language:    Haskell2010

test-suite 99HaskellProblems-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       99HaskellProblems
                     , QuickCheck >= 2.8.2
                     , base
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/chemouna/99Haskell
